test/TestPhases/parser/invalid/externInit.blc
@[EntryPoint]
activity E ()()
    extern var foo: int32 = 7
    await true
end